[package]
name = "ucsb-courses"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
actix-web = "2"
actix-rt = "1"
quote = "=1.0.2"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1"
failure = "0.1"
base64 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
